# pluginstall

./: Cargo.toml  pluginstall.manifest.toml
hyperx/: Cargo.toml  README.md
src/: caching.rs  cli.rs  error.rs  hangar_plugin.rs  main.rs  manifest.rs  output.rs  session.rs  spiget_plugin.rs  util.rs
src/adapter/: hangar.rs  mod.rs  spiget.rs
src/cli/: download.rs  info.rs  mod.rs  versions.rs
src/doc/: cmd.list.upgradable.arg.md  list.cmd.md  manifest.arg.md
src/subcommands/: download.rs  info.rs  list.rs  mod.rs  versions.rs
