[package]
name = "pluginstall"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["full"] }
env_logger = { version = "0.11.5", features = ["color"] }
futures = "0.3.31"
homedir = "0.3.4"
http-cache-reqwest = "0.15.1"
hyperx = { path = "./hyperx", features = ["compat", "headers"] }
indexmap = "2.8.0"
log = "0.4.22"
owo-colors = "4.1.0"
pretty-bytes = "0.2.2"
ref-cast = "1.0.24"
reqwest = { version = "0.12.9", features = ["stream"] }
reqwest-middleware = { version = "0.4.1", features = ["http2"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.4"
tokio = { version = "1.44.0", features = ["fs", "io-std", "io-util", "rt-multi-thread"] }
tokio-util = { version = "0.7.13", features = ["futures-io", "futures-util", "io", "io-util"] }
toml = "0.8.19"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.15.1", features = ["serde"] }
